<resources>
    <string name="app_name">Kotlin-DemoApp</string>
    <string name="linethrough_text"><strike>This text is Linethrough text</strike></string>
    <string name="left_overflow_text">This text is left Overflow text which is overflow its text from left</string>
    <string name="right_overflow_text">This text is right Overflow text which is overflow its text from right</string>
    <string name="center_overflow_text">This text is center Overflow text which is overflow its text from center</string>
    <string name="marquee_overflow_text">This text is marquee Overflow text which is overflow its text from marquee</string>
    <string name="underline_text">This text is Underline text</string>
    <string name="different_font_text">Different font text</string>
    <string name="colored_text">This text is colored text</string>
    <string name="backgroud_text">Text with Background</string>
    <string name="normal_text">Normal Text</string>
    <string name="different_colored_text">This text is different colored text</string>
    <string name="selectable_text">Selectable Text</string>
    <string name="clickable_text">Clickable Text</string>
    <string name="long_pressed_text">Long pressed Text</string>
    <string name="shadow_text">Text with Shadow</string>
    <string name="scrollable_text">Scrollable Text\n1\n2\n3\n4\n5\n6\n7\n8\n9\n10</string>
    <string name="url_text">www.google.com</string>
    <string name="select_gender">SELECT GENDER</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="not_selected">Not Selected</string>
    <string name="select_hobby">SELECT HOBBY</string>
    <string name="clear_selection">Clear Selection</string>
    <string name="status">Status</string>
    <string name="playing_cricket">Playing Cricket</string>
    <string name="listening_songs">Listening Songs</string>
    <string name="watching_movies">Watching Movies</string>
    <string name="reading">Reading</string>
    <string name="cricket">Cricket</string>
    <string name="football">Football</string>
    <string name="hockey">Hockey</string>
    <string name="switchLable">ImageEditable</string>
    <string name="custom_toast">This is Custom Toast</string>
    <string name="defaultChip">Default</string>
    <string name="entry">Entry</string>
    <string name="choice">Choice</string>
    <string name="filter">Filter</string>
    <string name="action">Action</string>
    <string name="backgroundColor">Background Color</string>
    <string name="rippleColor">Ripple Color</string>
    <string name="chipIcon">Chip Icon</string>
    <string name="change_account_security">Change Account Security</string>
    <string name="demoEmail">ruchit@simformsolutions.com</string>
    <string name="edit_email">Edit email</string>
    <string name="mfaHeading">Multi-Factor Authentication</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet,consectetur adipiscing elit, sed do eiusmod tempo incididunt ut labore et dolore magna aliqua. Ut enimad minim veniam, um dolor sit amet,consectetur adipiscing elit, sed do eiusmod tempo incididunt ut labore et dolore magna aliqua. Ut enimad minim veniam, quis nostrud.Contrary to popular belief,Lore quis nostrud.</string>
    <string name="text_secret">Enter the secret below in the Authentication app.</string>
    <string name="set_up_authentication">Set Up Authentication</string>
    <string name="enter_passcode">Enter Passcode</string>
    <string name="_123456">123456</string>
    <string name="passcode_subtitle">Enter tha passcode generated in Authorization</string>
    <string name="password_instruction">Minimum length of 8 characters, minimum 1 Capital letter(s), minimum of 1 number(s).</string>
    <string name="save">Save</string>
    <string name="enter_password">Enter Password</string>
    <string name="choose_date">Choose Date</string>
    <string name="choose_time">Choose Time</string>
    <string name="schedule_meeting">Schedule Meeting</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in_with_google">Log In With Google</string>
    <string name="or">\u0020\u0020\u0020or\u0020\u0020\u0020</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="term_condition">I agree and accept the term to use.</string>
    <string name="upcoming_tour">Upcoming Tour</string>
    <string name="next_tour">7 day up to the next tour</string>
    <string name="start_date">15 Feb</string>
    <string name="history">History</string>
    <string name="discover">Discover</string>
    <string name="america">America</string>
    <string name="europe">Europe</string>
    <string name="africa">Africa</string>
    <string name="asia">Asia</string>
    <string name="popular">Popular</string>
    <string name="best_choice">Best Choice</string>
    <string name="_5_star">5 Star</string>
    <string name="last_trip">Last Trip`s</string>
    <string name="travel_time">Travel Time</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="travel_day">Travel Day</string>
    <string name="_30_or_less">30 day`s \nor less</string>
    <string name="_15_7_day">15–7\nday</string>
    <string name="_7_4_day">7–4\nday</string>
    <string name="_5_2_day">5–2\nday</string>
    <string name="_2_1_day">2–1\nday</string>
    <string name="actions">Actions</string>
    <string name="clear">Clear</string>
    <string name="close">Close</string>
    <string name="normal_snackbar">Normal SnackBar</string>
    <string name="action_snackbar">Action SnackBar</string>
    <string name="custom_snackbar">Custom SnackBar</string>
    <string name="dismiss">DISMISS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_details">Confirm all data you have entered.</string>
    <string name="confirm_signup">Confirm Sign Up</string>
    <string name="citation_data">Citation Data</string>
    <string name="citation_id">Citation ID</string>
    <string name="facility">Facility</string>
    <string name="due_date">Due Date</string>
    <string name="fine_amount">Fine Amount</string>
    <string name="details">Details</string>
    <string name="pay">Pay</string>
    <string name="paid">Paid</string>
    <string name="unpaid">Unpaid</string>
    <string name="dollar">$%1$d</string>
    <string name="pick_image">Pick Image</string>
    <string name="change">Change</string>
    <string name="edit">Edit</string>
    <string name="left">LEFT</string>
    <string name="right">RIGHT</string>
    <string name="name">Name</string>
    <string name="name_with_colon">Name : </string>
    <string name="surname">SURNAME</string>
    <string name="go">GO</string>
    <string name="enter_website_name">Enter Website Name</string>
    <string name="call">Call</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="open_camera_image">Open Camera in Image mode</string>
    <string name="open_camera_video">Open Camera in Video mode</string>
    <string name="camera">camera</string>
    <string name="capture_image">Open Camera for capture Image</string>
    <string name="dash">---------</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_surname">Enter Surname</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="submit">submit</string>
    <string name="result">result</string>
    <string name="phone">PHONE</string>
    <string name="enter_title">Enter Title</string>
    <string name="double_string_with_space">%1s %2s</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="location">location</string>
    <string name="enter_location">Enter Location</string>
    <string name="share_text">share text</string>
    <string name="enter_text">Enter Text</string>
    <string name="enter_delay">Enter Delay</string>
    <string name="launch">launch</string>
    <string name="pending_intent">Pending Intent</string>
    <string name="intent_filter">Intent Filter</string>
    <string name="chat">Chat</string>
    <string name="meeting">Meeting</string>
    <string name="fax">Fax</string>
    <string name="profile">Profile</string>
    <string name="channels">Channels</string>
    <string name="direct_messages">Direct Messages</string>
    <string name="channel">Channel</string>
    <string name="dummy_text">This is text</string>
    <string name="on_cloud">On Cloud</string>
    <string name="parking_citation">Parking Citation</string>
    <string name="security_screen">Security Screen</string>
    <string name="go_tour">Go Tour</string>
    <string name="components">Components</string>
    <string name="placeholder">Placeholder</string>
    <string name="constrain_layout">Constrain Layout</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="pinned">Pinned</string>
    <string name="files">Files</string>
    <string name="send">send</string>
    <string name="empty_data">Data is empty. Click to submit data!!</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="dummy_number">10</string>
    <string name="enter_seconds">Enter seconds</string>
    <string name="timer">Timer</string>
    <string name="release_date">Release Date</string>
    <string name="no_data">No more data !!</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="user">User</string>
    <string name="movies">Movies</string>
    <string name="employee">Employee</string>
    <string name="created_at">Created At :</string>
    <string name="add_employee">Add Employee</string>
    <string name="navigation">Navigation</string>
    <string name="web_services">Web Services</string>
    <string name="simform">Simform, Ahmedabad</string>
    <string name="default_text">DEFAULT TEXT</string>
    <string name="choose_app">Choose App</string>
    <string name="choose_browser">Choose Browser</string>
    <string name="some_subject">SOME SUBJECT</string>
    <string name="local_date">$1%s / $2%s / $3%s</string>
    <string name="date_with_month">$1%s $2%s, $3%s</string>
    <string name="time">$1%s : $2%s</string>
    <string name="promocode">CLECVXEJB374</string>
    <string name="camera_permission_denied">Please give permission to access camera.</string>
    <string name="storage_permission_denied">Please give permission to access storage.</string>
    <string name="app_logo">App Logo</string>
    <string name="email_id">Email ID</string>
    <string name="face_id">Face ID</string>
    <string name="login_with_email">Login with Email</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="subscribe_for_newsletter">Subscribe for Newsletter</string>
    <string name="create_account">Create Account</string>
    <string name="logout">Logout</string>
</resources>