<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/btnLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linear_layout"
            app:layout_constraintBottom_toTopOf="@+id/btnRelativeLayout"
            app:layout_constraintEnd_toEndOf="@+id/btnRelativeLayout"
            app:layout_constraintStart_toStartOf="@+id/btnRelativeLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/btnRelativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relative_layout"
            app:layout_constraintBottom_toTopOf="@+id/btnConstraintLayout"
            app:layout_constraintEnd_toEndOf="@+id/btnConstraintLayout"
            app:layout_constraintStart_toStartOf="@+id/btnConstraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/btnLinearLayout" />

        <Button
            android:id="@+id/btnConstraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/constrain_layout"
            app:layout_constraintBottom_toTopOf="@+id/placeholder"
            app:layout_constraintEnd_toEndOf="@+id/placeholder"
            app:layout_constraintStart_toStartOf="@+id/placeholder"
            app:layout_constraintTop_toBottomOf="@+id/btnRelativeLayout" />

        <Button
            android:id="@+id/placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            app:layout_constraintBottom_toTopOf="@+id/btnComponent"
            app:layout_constraintEnd_toEndOf="@+id/btnComponent"
            app:layout_constraintStart_toStartOf="@+id/btnComponent"
            app:layout_constraintTop_toBottomOf="@+id/btnConstraintLayout" />

        <Button
            android:id="@+id/btnComponent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/components"
            app:layout_constraintBottom_toTopOf="@+id/btnGoTour"
            app:layout_constraintEnd_toEndOf="@+id/btnSecurity"
            app:layout_constraintStart_toStartOf="@+id/btnSecurity"
            app:layout_constraintTop_toBottomOf="@+id/placeholder" />

        <Button
            android:id="@+id/btnGoTour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_tour"
            app:layout_constraintBottom_toTopOf="@+id/btnSecurity"
            app:layout_constraintEnd_toEndOf="@+id/btnComponent"
            app:layout_constraintStart_toStartOf="@+id/btnComponent"
            app:layout_constraintTop_toBottomOf="@+id/btnComponent" />

        <Button
            android:id="@+id/btnSecurity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security_screen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnGoTour"
            app:layout_constraintBottom_toTopOf="@id/btnOnCloud"/>

        <Button
            android:id="@+id/btnOnCloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_cloud"
            app:layout_constraintTop_toBottomOf="@id/btnSecurity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnParkingCitation"/>

        <Button
            android:id="@+id/btnParkingCitation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parking_citation"
            app:layout_constraintTop_toBottomOf="@id/btnOnCloud"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.example.kotlin_demoapp.custom_views.OtpView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/btnParkingCitation"
            android:layout_marginTop="@dimen/_20dp"
            app:custom_padding="@dimen/_10dp"
            app:custom_margin="@dimen/_2dp"
            app:borderWidth="@dimen/_2dp"
            app:custom_text_color="@color/deepAqua"
            app:backgroundColor="@color/deepAquaSecondary"
            app:otpCount="4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>