<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/txtTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_number"
        android:textSize="@dimen/_30sp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etTimer"/>

    <EditText
        android:id="@+id/etTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_50dp"
        android:hint="@string/enter_seconds"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/txtTimer"
        app:layout_constraintBottom_toTopOf="@id/btnStart"/>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/etTimer"
        app:layout_constraintStart_toStartOf="@id/etTimer"
        app:layout_constraintEnd_toEndOf="@id/etTimer"
        app:layout_constraintBottom_toTopOf="@id/btnStop"/>

    <Button
        android:id="@+id/btnStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/stop"
        app:layout_constraintTop_toBottomOf="@id/btnStart"
        app:layout_constraintStart_toStartOf="@id/btnStart"
        app:layout_constraintEnd_toEndOf="@id/btnStart"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>